Updated home sass file and added a subheading variable. Also updated the text and styling next to the video. Updated buttons to warning instead of danger, these will be updated later

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li>
-                  <a href="#GetUgui" class="btn btn-danger">Get UGUI</a>
+                  <a href="#GetUgui" class="btn btn-warning">Get UGUI</a>
                 </li>
                 <li><a href="#githubFork">Fork on Github</a></li>
               </ul>
@@ -88,18 +88,19 @@
   <div id="content">
 
       <section id="feature">
-
-        <div class="embed-responsive embed-responsive-16by9">
+<!--
+        <div class="embed-responsive embed-responsive-16by9 col-md-5">
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/h2uOwtQbEHQ"></iframe>
         </div>
-
-
-        <iframe src="https://www.youtube.com/embed/h2uOwtQbEHQ" frameborder="0" allowfullscreen></iframe>
-        <h1>UGUI</h1>
-        <p>tagline</p>
-        <button>Download</button>
+-->
+        <div class="container cold-md-7">
+          <iframe src="https://www.youtube.com/embed/h2uOwtQbEHQ" frameborder="0" allowfullscreen></iframe>
+          <h1>UGUI</h1>
+          <h3 id="subheading">The Universal Graphical User Interface</h3>
+          <p>Give a face to the command line using HTML, CSS, & JavaScript</p>
+          <button class="btn btn-warning">Download</button>
+        </div>
       </section>
-
       <hr />
 
       <section id="threeIcons">
