--- a/index.html
+++ b/index.html
@@ -93,14 +93,20 @@
           <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/h2uOwtQbEHQ"></iframe>
         </div>
 -->
-        <div class="container cold-md-7">
+      <div class="row">
+        <div class="container col-lg-6">
           <iframe src="https://www.youtube.com/embed/h2uOwtQbEHQ" frameborder="0" allowfullscreen></iframe>
+        </div>
+
+        <div class="container col-lg-6">
           <h1>UGUI</h1>
           <h3 id="subheading">The Universal Graphical User Interface</h3>
           <p>Give a face to the command line using HTML, CSS, & JavaScript</p>
           <button class="btn btn-warning">Download</button>
         </div>
+      </div>
       </section>
+
       <hr />
 
       <section id="threeIcons">
