Column sizing has been fixed from large to small screens as far as video and information on the side goes

--- a/index.html
+++ b/index.html
@@ -88,17 +88,15 @@
   <div id="content">
 
       <section id="feature">
-<!--
-        <div class="embed-responsive embed-responsive-16by9 col-md-5">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/h2uOwtQbEHQ"></iframe>
-        </div>
--->
+
       <div class="row">
-        <div class="container col-lg-6">
-          <iframe src="https://www.youtube.com/embed/h2uOwtQbEHQ" frameborder="0" allowfullscreen></iframe>
+        <div class="container col-lg-6 col-md-6 col-sm-9">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/h2uOwtQbEHQ" frameborder="0" allowfullscreen></iframe>
+          </div>
         </div>
 
-        <div class="container col-lg-6">
+        <div class="container col-lg-6 col-md-6 col-sm-3">
           <h1>UGUI</h1>
           <h3 id="subheading">The Universal Graphical User Interface</h3>
           <p>Give a face to the command line using HTML, CSS, & JavaScript</p>
