Testing of Get UGUI button

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li>
-                  <a href="#GetUgui" class="btn btn-warning">Get UGUI</a>
+                  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-warning">Get UGUI</a>
                 </li>
                 <li><a href="#githubFork">Fork on Github</a></li>
               </ul>
