Added icons as thumbnails for now

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="container col-lg-6 col-md-6 col-sm-3">
           <h1>UGUI</h1>
           <h3 id="subheading">The Universal Graphical User Interface</h3>
-          <p>Give a face to the command line using HTML, CSS, & JavaScript</p>
+          <p class="text-muted">Give a face to the command line using HTML, CSS, & JavaScript</p>
           <button class="btn btn-warning">Download</button>
         </div>
       </div>
@@ -123,7 +123,30 @@
       </section>
 
       <hr />
-
+<!-- ---------------------------- icons ------------------------------- -->
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+          <a href="#" class="thumbnail">
+            <img src="./_img/icon-Fast.png" alt="Fast">
+          </a>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+          <a href="#" class="thumbnail">
+            <img src="./_img/icon-Free.png" alt="Free">
+          </a>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+          <a href="#" class="thumbnail">
+            <img src="./_img/icon-OpenSource.png" alt="Open Source">
+          </a>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+          <a href="#" class="thumbnail">
+            <img src="./_img/icon-CrossPlatform.png" alt="Cross Platform">
+          </a>
+        </div>
+      </div>
+<!-- ------------------------ End of Icons --------------------------- -->
       <section id="screenshots">
         <nav>
           <a href="#" class="win"></a>
