Took out the thumbnail border class and fixed the column sizing

--- a/index.html
+++ b/index.html
@@ -125,23 +125,23 @@
       <hr />
 <!-- ---------------------------- icons ------------------------------- -->
       <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-          <a href="#" class="thumbnail">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+          <a href="#">
             <img src="./_img/icon-Fast.png" alt="Fast">
           </a>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-          <a href="#" class="thumbnail">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+          <a href="#">
             <img src="./_img/icon-Free.png" alt="Free">
           </a>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-          <a href="#" class="thumbnail">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+          <a href="#">
             <img src="./_img/icon-OpenSource.png" alt="Open Source">
           </a>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-          <a href="#" class="thumbnail">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+          <a href="#">
             <img src="./_img/icon-CrossPlatform.png" alt="Cross Platform">
           </a>
         </div>
