--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <link rel="fluid-icon"                   href="_img/meta/fluid.png"   type="image/png"                  />
     <link rel="icon"                         href="favicon.ico"           type="image/x-icon"               />
     <link rel="shortcut icon"                href="favicon.ico"           type="image/ico"                  />
+    <link href="http://fonts.googleapis.com/css?family=Teko:300"          type="text/css"  rel="stylesheet" />
     <style>
       *,
       *:before,
@@ -98,8 +99,12 @@
       }
       img { max-width: 100%; }
       h3 {
-          font-size: 20px;
+          font-family: "Teko", sans-serif;
+          font-size: 27px;
           font-weight: bold;
+          letter-spacing: 2px;
+          margin: 14px 0px 0px 0px;
+          color: #F9B88F;
       }
     </style>
   </head>
