--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
            -moz-box-sizing: border-box;
                 box-sizing: border-box;
       }
+      ::-webkit-scrollbar {
+          width: 12px;
+          background: #911146;
+      }
+      ::-webkit-scrollbar-track {
+          background: #2F2B2C;
+          margin: 12px 0px
+      }
+      ::-webkit-scrollbar-thumb {
+          background: #ED8C2B
+      }
       html,
       body {
           width: 100%;
