--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           background-position: center -65px;
           background-repeat: no-repeat;
           font-family: sans-serif;
-          overflow: hidden;
+          overflow: auto;
           color: #A6A5BA;
       }
       a {
