--- a/index.html
+++ b/index.html
@@ -48,6 +48,27 @@
 
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
     <script>window.jQuery || document.write('<script src="_scripts/jquery-2.1.3.min.js"><\/script>')</script>
+
+    <style>
+      body{background-attachment: fixed;
+          background: -webkit-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728;
+             background: -moz-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728;
+              background: -ms-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728;
+               background: -o-radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728;
+                  background: radial-gradient(center top, farthest-side, #ED8C2B, #911146 40%, #2B2728 95%, #2B2728), #2B2728;
+          position: relative;
+          background-size: 1000px 400px;
+          background-position: center -65px;
+          background-repeat: no-repeat;
+          font-family: sans-serif;
+          overflow: auto;
+          color: #A6A5BA;}
+      .btn.btn-warning{
+        background-color: #911146;
+        border: none;
+        border-radius: 1px;
+      }
+    </style>
   </head>
   <body>
 
@@ -100,7 +121,7 @@
           <h1>UGUI</h1>
           <h3 id="subheading">The Universal Graphical User Interface</h3>
           <p class="text-muted">Give a face to the command line using HTML, CSS, & JavaScript</p>
-          <button class="btn btn-warning">Download</button>
+          <a class="btn btn-warning text-center">Download</a>
         </div>
       </div>
       </section>
