--- a/_markup/documentation.html
+++ b/_markup/documentation.html
@@ -42,7 +42,7 @@
   3. If a checkbox is unchecked find all matching items on the page with that class and hide them.
   4. After all items have been hidden that relate to unchecked checkboxes run a different loop.
   5. Loop through all checkboxes again
-  6. This time i a checkbox is checked find all matching items on the page with that class and show them.
+  6. This time if a checkbox is checked find all matching items on the page with that class and show them.
 
 </div>
 
