--- a/_markup/documentation.html
+++ b/_markup/documentation.html
@@ -12,12 +12,15 @@
     border: 1px solid #CCC;
     border-radius: 3px;
     padding: 0px 2px; }
+  .filter-img {
+    box-shadow: 0px 0px 9px rgba(0,0,0,0.3);
+    border: 1px solid rgba(0,0,0,0.15); }
   .filter-exm {
     background-color: #EEE;
     border: 1px solid #CCC;
     border-radius: 4px;
-    padding: 6px;
-  }
+    overflow: auto;
+    padding: 6px; }
 </style>
 
 <div class="hide">
@@ -38,7 +41,7 @@
   All of the above are checkboxes grouped (review dropbox image). Here is the logic for the functionality:
 
   1. Show all elements on the page by default on page load.
-  2. Loop through all checkboxes on page load and any time a checkbox is toggled
+  2. Loop through all checkboxes on page load and any time a checkbox is clicked/toggled
   3. If a checkbox is unchecked find all matching items on the page with that class and hide them.
   4. After all items have been hidden that relate to unchecked checkboxes run a different loop.
   5. Loop through all checkboxes again
@@ -67,9 +70,9 @@
 <p>
   <span class="filter-nov">Then download a copy of <a href="http://ugui.io/#/download">UGUI</a>. After you extract the UGUI project folder from the zipped archive, you should rename the UGUI folder to whatever your project name is.</span>
   <div class="text-center">
-    <img src="../_img/exm_extract_zip_rename_folder_win.gif" alt="An animation showing UGUI.zip being extracted and the extracted folder being renamed on Windows." class="filter-img filter-nov filter-win" />
-    <img src="../_img/exm_extract_zip_rename_folder_mac.gif" alt="An animation showing UGUI.zip being extracted and the extracted folder being renamed on OSX." class="filter-img filter-nov filter-mac" />
-    <img src="../_img/exm_extract_zip_rename_folder_lin.gif" alt="An animation showing UGUI.zip being extracted and the extracted folder being renamed on Ubuntu." class="filter-img filter-nov filter-lin" />
+    <img src="../_img/docs/extract_zip_rename_folder_win.gif" alt="An animation showing UGUI.zip being extracted and the extracted folder being renamed on Windows." class="filter-img filter-nov filter-win" />
+    <img src="../_img/docs/extract_zip_rename_folder_mac.gif" alt="An animation showing UGUI.zip being extracted and the extracted folder being renamed on OSX." class="filter-img filter-nov filter-mac" />
+    <img src="../_img/docs/extract_zip_rename_folder_lin.gif" alt="An animation showing UGUI.zip being extracted and the extracted folder being renamed on Ubuntu." class="filter-img filter-nov filter-lin" />
   </div>
 </p>
 
@@ -125,7 +128,52 @@
 <h3>About your program</h3>
 
 <p>
-  <span class="filter-"></span>
+  <span class="filter-nov">In the <code>index.htm</code> towards the bottom is a section of HTML for the about modal. The about modal can be viewed when you run the UGUI app by clicking Help > About in the top navigation.</span>
+  <div class="text-center">
+    <img src="../_img/docs/about-help.png" alt="Screenshot of the UGUI navigation bar highlighting the Help submenu where About is located." class="filter-img filter-nov" />
+  </div>
+  <span class="filter-int">In the <code>#aboutModal</code> section of the <code>index.htm</code> file you'll find this chunk of code:</span>
+
+  <pre class="filter-exm filter-int">&lt;div class="panel panel-primary"&gt;
+  &lt;div class="panel-heading"&gt;
+    &lt;span class="pull-right versionApp" title="Version"&gt;V0.1.0&lt;/span&gt;
+    &lt;h3 class="panel-title"&gt;About &lt;span class="applicationName"&gt;Your Application Name&lt;/span&gt;&lt;/h3&gt;
+  &lt;/div&gt;
+  &lt;div class="panel-body"&gt;
+    &lt;p class="well well-sm"&gt;A detailed explanation of what your application does or is used for.&lt;/p&gt;
+    &lt;p&gt;
+      &lt;span class="applicationName"&gt;Your Application Name&lt;/span&gt; created by &lt;span class="authorName"&gt;Your Name&lt;/span&gt;&lt;br /&gt;
+    &lt;!--
+      Be sure to credit whoever made the command line executable.&lt;br /&gt;
+      You should probably &lt;a href="http://theirsite.com" class="external-link"&gt;link to their site&lt;/a&gt; and give a version number for the CLI program.
+    --&gt;
+    &lt;/p&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</pre>
+
+<script src="https://gist.github.com/TheJaredWilcurt/5e4995c936aa062dc3bb.js"></script>
+
+<pre data-height="442" data-theme-id="0" data-slug-hash="xbmxBy" data-default-tab="html" data-user="TheJaredWilcurt" class='codepen filter-exm'>&lt;div class=&quot;panel panel-primary&quot;&gt;
+  &lt;div class=&quot;panel-heading&quot;&gt;
+    &lt;span class=&quot;pull-right versionApp&quot; title=&quot;Version&quot;&gt;V0.1.0&lt;/span&gt;
+    &lt;h3 class=&quot;panel-title&quot;&gt;About &lt;span class=&quot;applicationName&quot;&gt;Your Application Name&lt;/span&gt;&lt;/h3&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;panel-body&quot;&gt;
+    &lt;p class=&quot;well well-sm&quot;&gt;A detailed explanation of what your application does or is used for.&lt;/p&gt;
+    &lt;p&gt;
+      &lt;span class=&quot;applicationName&quot;&gt;Your Application Name&lt;/span&gt; created by &lt;span class=&quot;authorName&quot;&gt;Your Name&lt;/span&gt;&lt;br /&gt;
+    &lt;!--
+      Be sure to credit whoever made the command line executable.&lt;br /&gt;
+      You should probably &lt;a href=&quot;http://theirsite.com&quot; class=&quot;external-link&quot;&gt;link to their site&lt;/a&gt; and give a version number for the CLI program.
+    --&gt;
+    &lt;/p&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</pre>
+<script async src="http://assets.codepen.io/assets/embed/ei.js"></script>
+
+  <span class="filter-int">Some of the content in this code will be overwritten by what you’ve defined in the <code>package.json</code> file. Specifically, the version (V0.1.0), Your Application Name, and Your Name. Although you can change this content here in the <code>index.htm</code> file, they will ultimately be displayed in your app with what was written in the <code>package.json</code>.</span>
+  <span class="filter-nov">The rest of the content in this section of code should be updated by you to reflect your application. You'll need to give a detailed explanation of what your app does or is used for and you should put in the version number for the command line program you're using and credit it's creators as well.</span>
+  <span class="filter-int">The link </span>
 </p>
 
 <h3>Changing from Development to Production mode</h3>
