--- a/_markup/documentation.html
+++ b/_markup/documentation.html
@@ -31,7 +31,7 @@
   .win .filter-mac,
   .win .filter-lin,
   .mac .filter-win,
-  .mac .filter-lin
+  .mac .filter-lin,
   .linux .filter-win,
   .linux .filter-mac { display: none; }
 </style>
