added jsfiddle link

--- a/_markup/documentation.html
+++ b/_markup/documentation.html
@@ -55,10 +55,11 @@
   All of the above are checkboxes grouped (review dropbox image). Here is the logic for the functionality:
 
   1. Show all elements on the page by default on page load.
-  2. Loop through all checkboxes on page load and any time a checkbox is clicked/toggled
+  2. Loop through all checkboxes on page load and any time a checkbox is clicked/toggled.
+  http://jsfiddle.net/StephanRaab/sfcxwotc/8/
   3. If a checkbox is unchecked find all matching items on the page with that class and hide them.
   4. After all items have been hidden that relate to unchecked checkboxes run a different loop.
-  5. Loop through all checkboxes again
+  5. Loop through all checkboxes again.
   6. This time if a checkbox is checked find all matching items on the page with that class and show them.
 
 </div>
