--- a/_markup/documentation.html
+++ b/_markup/documentation.html
@@ -82,14 +82,14 @@
 <h2>The Basics/Getting Started</h2>
 
 <p>
-  <span class="filter-nov">Before we get started, you'll need to know if your operating system is 32-Bit or 64-Bit to make sure you get the correct version of NW.js.</span>
-  <span class="filter-nov filter-win">On Windows, right-click on "Computer" and go to properties, or just press <kbd>Windows Key + Pause/Break</kbd>.</span>
-  <span class="filter-nov filter-mac">On OSX, click the Apple icon in the top left of the screen and go to "About his Mac". Click on More Information. If you have an Intel Core Solo or Intel Core Duo, it's 32-Bit. Intel Core 2 Duo and all other Intel CPU's will mean you have a 64-Bit OS. For a full listing, see <a href="https://support.apple.com/en-us/HT3696">Apple's website</a>.</span>
+  <span class="filter-nov">Before we get started, you'll need to know if your operating system is 32&#8209;Bit or 64&#8209;Bit to make sure you get the correct version of NW.js.</span>
+  <span class="filter-nov filter-win">On Windows, right&#8209;click on "Computer" and go to properties, or just press <kbd>Windows Key + Pause/Break</kbd>.</span>
+  <span class="filter-nov filter-mac">On OSX, click the Apple icon in the top left of the screen and go to "About his Mac". Click on More Information. If you have an Intel Core Solo or Intel Core Duo, it's 32&#8209;Bit. Intel Core 2 Duo and all other Intel CPU's will mean you have a 64&#8209;Bit OS. For a full listing, see <a href="https://support.apple.com/en-us/HT3696">Apple's website</a>.</span>
   <span class="filter-nov filter-lin">On Ubuntu Linux, click the top right power icon and go to "About This Computer".</span>
 </p>
 
 <p>
-  <span class="filter-nov">Once you know if your OS is 32-Bit or 64-Bit, download the correct version of <a href="http://nwjs.io" target="_blank">NW.js</a>. </span>
+  <span class="filter-nov">Once you know if your OS is 32&#8209;Bit or 64&#8209;Bit, download the correct version of <a href="http://nwjs.io" target="_blank">NW.js</a>. </span>
 </p>
 <p>
   <span class="filter-nov">Then download a copy of <a href="http://ugui.io/#/download">UGUI</a>. After you extract the UGUI project folder from the zipped archive, you should rename the UGUI folder to whatever your project name is.</span>
@@ -113,7 +113,7 @@
   <div>
     <span class="filter-int filter-win">In Windows press <kbd>Windows Key + R</kbd>, this will bring up the Run dialog. Type in the path to your NW.js folder and include the <code>nw.exe</code> file. Follow this with a <kbd>space</kbd> and the path your project folder where the <code>package.json</code> file is. Like so:</span>
     <pre class="filter-exm filter-win filter-int">C:\nw\nw.exe C:\Users\YOURNAME\Desktop\YOURPROJECT</pre>
-    <span class="filter-int filter-win">Another way to run your project is to create a shortcut in your project folder that runs that same command. To do this, right-click an empty part of your project folder and select <kbd>New &gt; Shortcut</kbd>. A new window will appear, type in that same command (pointing to nw.exe and your project folder) and press next. Name your shortcut something like "Run NW", then hit <code>Finish</code>. Now you can simply double-click this shortcut any time you want to run your project.</span>
+    <span class="filter-int filter-win">Another way to run your project is to create a shortcut in your project folder that runs that same command. To do this, right&#8209;click an empty part of your project folder and select <kbd>New &gt; Shortcut</kbd>. A new window will appear, type in that same command (pointing to nw.exe and your project folder) and press next. Name your shortcut something like "Run NW", then hit <code>Finish</code>. Now you can simply double&#8209;click this shortcut any time you want to run your project.</span>
   </div>
 
   <div>
@@ -130,7 +130,7 @@
 
 <h4>package.json</h4>
 <p>
-  <span class="filter-nov">In your project folder you'll find a <code>package.json</code> file. This is the configuration file that controls the way your application is displayed and behaves. Open it in any text editing application you're comfortable with (some common ones Sublime Text, Atom, Brackets, <span class="filter-win">Notepad,</span> <span class="filter-mac">TextEdit,</span> <span class="filter-lin">gedit,</span> or Notepad++) Each line is commented to explain the purpose of the line. Some of these are used by NW.js, some are used exclusively by UGUI, and some are used by both. Take a moment go line-by-line to familiarize yourself with the settings you have at your disposal and updating this file for your project. If a setting seems advanced or your not sure what it means, that's fine, just leave it at it's default setting.</span>
+  <span class="filter-nov">In your project folder you'll find a <code>package.json</code> file. This is the configuration file that controls the way your application is displayed and behaves. Open it in any text editing application you're comfortable with (some common ones Sublime Text, Atom, Brackets, <span class="filter-win">Notepad,</span> <span class="filter-mac">TextEdit,</span> <span class="filter-lin">gedit,</span> or Notepad++) Each line is commented to explain the purpose of the line. Some of these are used by NW.js, some are used exclusively by UGUI, and some are used by both. Take a moment go line&#8209;by&#8209;line to familiarize yourself with the settings you have at your disposal and updating this file for your project. If a setting seems advanced or your not sure what it means, that's fine, just leave it at it's default setting.</span>
 </p>
 <h4>index.htm</h4>
 <p>
@@ -178,7 +178,7 @@
 
   <span class="filter-int">Some of the content in this code will be overwritten by what you've defined in the <code>package.json</code> file. Specifically, the version (V0.1.0), Your Application Name, and Your Name. Although you can change this content here in the <code>index.htm</code> file, they will ultimately be displayed in your app with what was written in the <code>package.json</code>.</span>
   <span class="filter-nov">The rest of the content in this section of code should be updated by you to reflect your application. You'll need to give a detailed explanation of what your app does or is used for and you should put in the version number for the command line program you're using and credit it's creators as well.</span>
-  <span class="filter-int">The link shown in the commented out example has a class of <code>external-link</code>, which means it will launch in the user's default browser rather than in NW.js.</span>
+  <span class="filter-int">The link shown in the commented out example has a class of <code>external&#8209;link</code>, which means it will launch in the user's default browser rather than in NW.js.</span>
 </p>
 
 <h3>Changing from Development to Production mode</h3>
@@ -213,7 +213,6 @@
 
 <hr />
 
-</div> <!--/wrapper -->
 
 <h2>Code stuff</h2>
 <ul>
@@ -232,11 +231,11 @@
       <li class="filter-nov">The <code>data&#8209;argOrder</code> is mandatory because it is what decides the order in which all your commands will be sent to the command line.</li>
       <li class="filter-nov">This means that you can design your application knowing that you don't need to put the form elements in the same order that the command line expects them. You can put them in the order that makes the most sense for using your application and then the <code>data&#8209;argOrder</code> sorts them later.</li>
       <li class="filter-nov">Since this attribute is used to sort the arguments that get sent to the command line you can't have two elements with the same argOrder. If you do, a warning will appear in your app and in the console to warn you, but only when you are in Developer Mode (have <code>dev</code> as a class in the <code>&lt;body&gt;</code>).</li>
-      <li class="filter-nov">The numbers you pick for your argOrders do <strong>not</strong> need to be sequential. They can be in any order, and any value above 0, with missing numbers between them. Just don't have duplicates, negative numbers, non-numbers, numbers with decimal points, or the number zero.</li>
+      <li class="filter-nov">The numbers you pick for your argOrders do <strong>not</strong> need to be sequential. They can be in any order, and any value above 0, with missing numbers between them. Just don't have duplicates, negative numbers, non&#8209;numbers, numbers with decimal points, or the number zero.</li>
       <li class="filter-nov">In the above example we see two argOrders, 1 and 2. The sequence for that would be 1, 2. Here are two examples of longer sequences:
         <ul>
           <li class="filter-nov">Good sequence: 30, 1, 2, 3, 15, 18, 7, 99, 8</li>
-          <li class="filter-nov">Bad sequence: -18, 0, 3, false, 3, ?, 0.8, cow</li>
+          <li class="filter-nov">Bad sequence: &#8209;18, 0, 3, false, 3, ?, 0.8, cow</li>
           <li class="filter-nov">You'll never need to write out a sequence like this. This is just am example to simplify what values are and aren't allowed. Although 3 is allowed in the Good example, it's shown in the Bad example because it is duplicated.</li>
         </ul>
       </li>
@@ -259,9 +258,27 @@
 &lt;input type="text" data-argOrder="8" data-argPrefix="/speed " data-argSuffix="mph" data-argWrapQuotes="true" /&gt;  &lt;!-- /speed "60"mph --&gt;
 &lt;input type="text" data-argOrder="9" data-argPrefix="/speed " data-argSuffix="mph" data-argWrapQuotes="false" /&gt; &lt;!-- /speed 60mph   --&gt;</pre></li>
       <li class="filter-nov">Sometimes you need to allow your users to enter some text that should be wrapped in quotes when sent to the command line. In those instances just add <code>data&#8209;argWrapQuotes</code> to the element and set it to true.</li>
-      <li class="filter-nov"><strong>Important!</strong> All textarea elements and input boxes with a type of text are set to true by default, even if there is no <code>data&#8209;argWrapQuotes</code> at all on that element. If you explicitly want to make sure your <code>&lt;input type="text" /&gt;</code> or your <code>&lt;textarea&gt;</code> don't get wrapped in quotes, make sure to add in <code>data&#8209;argWrapQuotes="false"</code></li>
+      <li class="filter-nov"><strong>Important!</strong> All textarea elements and input boxes with a type of text are set to true by default (as long as they're in the <code>&lt;form id="argForm"&gt;</code> and have a <code>data&#8209;argOrger</code> attribute), even if there is no <code>data&#8209;argWrapQuotes</code> at all on that element. If you explicitly want to make sure your <code>&lt;input type="text" /&gt;</code> or your <code>&lt;textarea&gt;</code> don't get wrapped in quotes, make sure to add in <code>data&#8209;argWrapQuotes="false"</code>. The example below will help to clarify this:</li>
+      <li><pre class="filter-exm filter-int">&lt;form id="argForm"&gt;
+
+    &lt;textarea data-argOrder="1"&gt;&lt;/textarea&gt;                               &lt;!-- Will be wrapped --&gt;
+    &lt;textarea data-argOrder="2" data-argWrapQuote="true"&gt;&lt;/textarea&gt;      &lt;!-- Will be wrapped --&gt;
+    &lt;textarea data-argOrder="3" data-argWrapQuote="false"&gt;&lt;/textarea&gt;     &lt;!-- Won't be wrapped --&gt;
+
+    &lt;input type="text" data-argOrder="4" /&gt;                               &lt;!-- Will be wrapped --&gt;
+    &lt;input type="text" data-argOrder="5" data-argWrapQuote="true" /&gt;      &lt;!-- Will be wrapped --&gt;
+    &lt;input type="text" data-argOrder="6" data-argWrapQuote="false" /&gt;     &lt;!-- Won't be wrapped --&gt;
+
+    &lt;input type="checkbox" data-argOrder="7" /&gt;                           &lt;!-- Won't be wrapped --&gt;
+    &lt;input type="checkbox" data-argOrder="8" data-argWrapQuote="true" /&gt;  &lt;!-- Will be wrapped --&gt;
+    &lt;input type="checkbox" data-argOrder="9" data-argWrapQuote="false" /&gt; &lt;!-- Won't be wrapped --&gt;
+    &lt;!-- Only &lt;textarea&gt; and &lt;input type="text"&gt; get auto-wrapped --&gt;
+
+&lt;/form&gt;</pre></li>
+      <li>The reason this is done this way is because in almost all cases text that can contain spaces in a command line must be wrapped. So we use the UX principle of smart defaults to make sure this is done automatically. However to give you as much control as possible, in the rare case you don't want these form elements to have their output wrapped you can disable it.</li>
     </ul>
   </li>
 </ul>
 
+</div> <!--/wrapper -->
 <div class="footerpadding"></div>
